--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,6 +15,14 @@
   margin-right: auto;
 }
 
+.home-screen-loading-spinner {
+  display: block;
+  align-items: center;
+  margin-top: 15.5%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .App-link {
   color: #61dafb;
 }
