--- a/src/css/RepoGraph.css
+++ b/src/css/RepoGraph.css
@@ -9,6 +9,7 @@
 .repo-graph-loading-spinner {
   display: block;
   align-items: center;
+  text-align: center;
   margin-top: 15.5%;
   margin-left: auto;
   margin-right: auto;
