--- a/src/css/ContributorsCarousel.css
+++ b/src/css/ContributorsCarousel.css
@@ -1,8 +1,11 @@
-.repo-graph-loading-spinner {
+.contributors-carousel {
   display: block;
   align-items: center;
   text-align: center;
-  margin-top: 15.5%;
+  margin-top: 40.5%;
   margin-left: auto;
   margin-right: auto;
+  width: 90%;
+  height:100%;
+  color: white;
 }
