--- a/src/css/RepoPage.css
+++ b/src/css/RepoPage.css
@@ -1,13 +1,24 @@
-.repo-page-container {
+.row1 {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
   width: calc(100% - 15px);
-  height: calc(100% - 150px);
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 8%;
 }
 
 .return-button {
   margin-top: 7.0%;
+}
+
+.col1 {
+  display: flex;
+  flex-direction: column;
+  width: calc(25% - 15px);
+}
+
+.col2 {
+  display: flex;
+  flex-direction: column;
+  width: calc(75% - 15px);
 }
